[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.3.25"
enum-iterator = "1.3.0"
hecs = "0.9.1"
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
once_cell = "1.17.1"

[profile.release]
lto = true

[profile.dev.package.'*']
opt-level = 3